--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-python-decouple==3.5
 alembic==1.5.5
 attrs==20.3.0
+certifi==2021.10.8
+charset-normalizer==2.0.9
 click==7.1.2
 Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
 Flask-Migrate==2.7.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
+idna==3.3
 importlib-metadata==3.7.0
 iniconfig==1.1.1
 itsdangerous==1.1.0
@@ -16,17 +19,21 @@ packaging==20.9
 pluggy==0.13.1
 psycopg2-binary==2.8.6
 py==1.10.0
+PyJWT==2.0.0
+PyMySQL==1.0.2
 pyparsing==2.4.7
 pytest==6.2.2
 python-dateutil==2.8.1
+python-decouple==3.5
 python-dotenv==0.15.0
 python-editor==1.0.4
+requests==2.26.0
 six==1.15.0
 SQLAlchemy==1.3.23
 toml==0.10.2
 typing-extensions==3.7.4.3
+urllib3==1.26.7
 Werkzeug==1.0.1
 zipp==3.4.0
-pyjwt==2.0.0
 requests==2.26.0
 gunicorn==20.1.0
